FindBugs; misc clean up.